--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>{{ 'Server'}} with ID {{ serverId }} is {{ serverStauts }}</p>
+<p>{{ 'Server'}} with ID {{ serverId }} is {{ getServerStatus() }}</p>
